v0.10.1/_sources/generated/statsmodels.tsa.regime_switching.markov_regression.MarkovRegression.rst.txt
statsmodels.tsa.regime\_switching.markov\_regression.MarkovRegression
=====================================================================

.. currentmodule:: statsmodels.tsa.regime_switching.markov_regression

.. autoclass:: MarkovRegression

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MarkovRegression.filter
         MarkovRegression.fit
         MarkovRegression.from_formula
         MarkovRegression.hessian
         MarkovRegression.information
         MarkovRegression.initial_probabilities
         MarkovRegression.initialize
         MarkovRegression.initialize_known
         MarkovRegression.initialize_steady_state
         MarkovRegression.loglike
         MarkovRegression.loglikeobs
         MarkovRegression.predict
         MarkovRegression.predict_conditional
         MarkovRegression.regime_transition_matrix
         MarkovRegression.score
         MarkovRegression.score_obs
         MarkovRegression.smooth
         MarkovRegression.transform_params
         MarkovRegression.untransform_params



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MarkovRegression.endog_names
         MarkovRegression.exog_names
         MarkovRegression.k_params
         MarkovRegression.param_names
         MarkovRegression.start_params

